--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,13 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
-
+		<!--引入Knife4j的官方start包,Swagger2基于Springfox2.10.5项目-->
+		<dependency>
+			<groupId>com.github.xiaoymin</groupId>
+			<!--使用Swagger2-->
+			<artifactId>knife4j-spring-boot-starter</artifactId>
+			<version>2.0.9</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jdbc</artifactId>
