--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>1.4.5</version>
+		</dependency>
 		<!--引入Knife4j的官方start包,Swagger2基于Springfox2.10.5项目-->
 		<dependency>
 			<groupId>com.github.xiaoymin</groupId>
