--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,6 +2,10 @@ server:
   port: 8111
 
 spring:
+  mvc:
+    pathmatch:
+      # 配置策略
+      matching-strategy: ant-path-matcher
   datasource:
     username: root
     password: 203525
@@ -10,9 +14,16 @@ spring:
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.example.entity
+  configuration:
+    mapUnderscoreToCamelCase: true
+
 #showSql
 logging:
   level:
     com:
       example:
         mapper: debug
+pagehelper:
+  propertyName: propertyValue
+  reasonable: false
+  defaultCount: true # 分页插件默认参数支持 default-count 形式，自定义扩展的参数，必须大小写一致
